fix: align elements properly that are being animated

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,21 +24,21 @@
   @keyframes top-fade-in {
     0% {
       opacity: 0;
-      transform: translateY(-1rem);
+      translate: 0 -1rem;
     }
     100% {
       opacity: 1;
-      transform: translateY(0);
+      translate: 0 0;
     }
   }
   @keyframes left-fade-in {
     0% {
       opacity: 0;
-      transform: translateX(-1rem);
+      translate: -1rem;
     }
     100% {
       opacity: 1;
-      transform: translateX(0);
+      translate: 0;
     }
   }
 }
